updation and 28th JS project DigitalClock added

--- a/_27_CryptoCurrencyWebsite/style.css
+++ b/_27_CryptoCurrencyWebsite/style.css
@@ -71,7 +71,7 @@ nav .btn {
   padding: 15px 30px;
   border-radius: 30px;
 }
-.coint-list {
+.coin-list {
   position: absolute;
   right: 10%;
   bottom: 50px;
