API key removed from JS_project 01_weatherApp

--- a/_01_WeatherApp/style.css
+++ b/_01_WeatherApp/style.css
@@ -12,6 +12,7 @@ body {
   max-width: 470px;
   background: linear-gradient(135deg, #00feba, #5b548a);
   color: #fff;
+  /* margin: 100px auto; */
   margin: 100px auto 0;
   border-radius: 20px;
   padding: 40px 35px;
